WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
122700
[Soup] The NeverDestroyed<std::unique_ptr<NetworkStorageSession>> variable in defaultSession() should be static
https://bugs.webkit.org/show_bug.cgi?id=122700
Summary
[Soup] The NeverDestroyed<std::unique_ptr<NetworkStorageSession>> variable in...
Zan Dobersek
Reported
2013-10-12 13:46:00 PDT
[Soup] The NeverDestroyed<std::unique_ptr<NetworkStorageSession>> variable in defaultSession() should be static
Attachments
Patch
(1.48 KB, patch)
2013-10-12 13:51 PDT
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zan Dobersek
Comment 1
2013-10-12 13:51:58 PDT
Created
attachment 214064
[details]
Patch
Zan Dobersek
Comment 2
2013-10-12 14:13:23 PDT
Comment on
attachment 214064
[details]
Patch Clearing flags on attachment: 214064 Committed
r157347
: <
http://trac.webkit.org/changeset/157347
>
Zan Dobersek
Comment 3
2013-10-12 14:13:30 PDT
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 4
2013-10-12 15:17:05 PDT
Oops, did I forget the "static" in any other NeverDestroyed lines? Someone should check with grep.
Zan Dobersek
Comment 5
2013-10-12 23:06:58 PDT
No, all NeverDestroyed declarations are now static.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug