[Soup] The NeverDestroyed<std::unique_ptr<NetworkStorageSession>> variable in defaultSession() should be static https://bugs.webkit.org/show_bug.cgi?id=122700

Reviewed by Anders Carlsson.

* platform/network/soup/NetworkStorageSessionSoup.cpp:
(WebCore::defaultSession): The NeverDestroyed variable should be static to avoid its reinitialization every time
the function is called. This was exposed by r157337 and should fix the subsequent crashes.


Canonical link: https://commits.webkit.org/140816@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157347 268f45cc-cd09-0410-ab3c-d52691b4dbfc